# nutri_lab

./: .env  .gitattributes  README.md  db.sqlite3  docker-compose.yml  dockerfile.txt  pyproject.toml
autenticacao/: models.py  urls.py  utils.py  views.py
autenticacao/migrations/: 0001_initial.py
autenticacao/templates/: cadastro.html  logar.html
nutri_lab/: settings.py  urls.py
plataforma/: admin.py  models.py  urls.py  views.py
plataforma/migrations/: 0001_initial.py  0002_dadospaciente.py  0003_refeicao_opcao.py
plataforma/templates/: dados_paciente.html  dados_paciente_listar.html  pacientes.html  plano_alimentar.html  plano_alimentar_listar.html
templates/: base.html  base_plataforma.html
